src/global/_global.scss
/* ... */
@media(max-width: 768px) {
  .body-content-pd-2 {
    padding: 0;
  }
  .change__{
    .row{
      display: flex !important;
      padding: 8px;
    }
    .search_div{
      width: 100%;
      padding: 0 10px;
    }
    .radio-toolbar{
      display: block;
    }
  }
  .item_card{
    border-radius: 10px !important;
    padding: 0 7px;
    .product__item{
      .product__image {
        img{
          height: 100px;
        }
      }
    }
  }
  .capacity {
    margin-bottom: .5rem;
  }
  .grid-container{
    .grid-item{
      h5{
        font-size: 1.1rem;

      }
    }
  }
  .side_filters{
    display: grid;
    grid-template-columns: auto auto ;
    justify-content: center;
    .radio-toolbar{
      display: grid;
      grid-template-columns: auto auto ;
      input[type="radio"]:checked + label ,  input[type="radio"]:not(checked) + label{
        font-size: 0.9rem;
        padding: 8px;
        .uil{
          font-size: 1rem;

        }
      }
    }
  }
  .item-pi{
    display: block;
  }
  .table-pi-list{
    display: none ;
    button{
      display: inline-block;
    }
  }
  .form-popup{
    width: 100%;
    top: 10%;
    left: -4%;
  }
  .search_container{
    display: block;
    div:nth-child(1),
    div:nth-child(2){
      padding: 0;
    }
  }
  .card-add-product{
    margin: 0 0.6rem 1rem;
    .card-add-product-body{
      padding: .5rem;
      .row{
        .col-lg-6,.col-lg-12,.col-lg-3{
          .form-group{
            margin: .5rem 0;
            .form-check{
              display: inherit;
              margin: 10px 5px;              
            }
          }
        }
      }
    }
  }
  .dropdown{
    .profile-img{
      img{
        width: 35px;
        height: 35px;
      }
    }
  }
  .ags-btn-review {
    position: fixed;
    right: 5px;
    bottom: 15px;
    width: 37px;
    height: 37px;
    border-radius: 50%;
    display: block;
    z-index: 100;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--second-color);
    .uil {
      font-size: 2rem;
      color: var(--second-color);
      transition: all 0.5s ease-in-out;
      opacity: 0.8;
      color: #fff;
      &:hover {
        transform: scale(1);
        cursor: pointer;
        opacity: 1;
      }
    }
  }
  .summary-info{
   .summary-item{
     display: block;
     strong,p{
       display: flex;
       align-items: center;
       padding: 5px 10px;
     }
     strong{
       text-align: left;
       width: 100%;
       background-color: #efefef;
     }
     p{
       width: 100%;
       margin: 0;
     }
   }
 }
 .ags-btn-top{
  display: none !important;
 }
 .card-custom{
  .card-custom-tittle{
  }
  .card-custom-body{
    .row{
      grid-template-columns: 1fr ;
    }
    .search_section{
      input[type=text]{
        margin: 0;
        padding: 8px !important;
      }
      button{
        margin: 5px;
        display: block;
      }
    }

  }
}
.trucks-list{
  .trucks-body{
    .truck-item-body{
      .row{
        display: grid;
        grid-template-columns: 1fr    !important;
        .col-lg-4{
          width: 100%;
         
        }
      }
    }
  }
}
.desktop-table{
  display: none ;
}
.truck-table-mobile, .truck-item-table-mobile{
  display: block;
}
.truck-table-mobile{
  .wrapper-truck{
    .wrapper{
      .box{
        h6{
          font-weight: 600;
          font-size: 14px;
        } 
        span{
          font-size: 13px;
        }
        input{
          padding: 5px 10px;
        }
      }
    }
  }
  
}
.truck-item-table-mobile{
  .wrapper-truck{  
    .wrapper{
      .box{
        h6{
          font-size: 14px;
        }
        span{
          font-size: 13px;
        }
      } 
    
    }
    .wrapper-footer{
      .box{
        h6{
          font-size: 14px;
        }
      } 
     span{
      font-size: 13px;
     }
  }
  }
}
.table-infroamtion{  
  tbody{
      th,td{
        font-size:85%;
      }
   
  }
}
.inputs-pkl{
    .col-12{
      .form-group{
        label{
          font-size: 14px;
        }
      }
  }
}
.pi__table{
  display: none;
}
}
/* ... */

